--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@stylesheets/*": ["./stylesheets/*"],
+      "@components/*": ["./components/*"],
     }
   }
 }
